@@ -1,3 +1,8 @@
+2007-10-23  Joe English  <jenglish@users.sourceforge.net>
+
+	* library/ttk/combobox.tcl: [namespace import ::ttk::scrollbar]
+	doesn't work, since ttk::scrollbar isn't [namespace export]ed.
+
 2007-10-23  Don Porter  <dgp@users.sourceforge.net>
 
 	* tests/cursor.test:	Make tests robust against changes in Tcl's
